feat(ui,admin,vendor): offline banner and friendly error notifications\n\n- Add NetworkStatusBanner and ErrorAlert components\n- Add notify utilities and standardized error messages (vendor/admin)\n- Replace broken glyph with CheckCircle; stabilize Lucide icon rendering\n- Guard for offline, out-of-stock, and payment failures\n- Wire vendor/admin flows: login, dashboard, product management\n- Add icon audit script and npm script

--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "dev": "node run-dev.js",
     "dev:mock": "node run-dev.js --mock-backend",
-    "test:e2e": "node run-e2e.js"
+    "test:e2e": "node run-e2e.js",
+    "generate:logo": "node scripts/render-logo.js",
+    "audit:icons": "node scripts/check-icons.js"
   },
   "devDependencies": {
-    "puppeteer": "^22.8.0"
+    "puppeteer": "^22.8.0",
+    "sharp": "^0.34.4"
   }
 }
