--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^6.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.20.0",
     "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
